@@ -281,22 +281,37 @@ class EventServiceImplTest {
             );
 
             return Stream.of(
-                    arguments(dateTime, Collections.emptyList(), null, null),
-                    arguments(dateTime, List.of(event1), null, null),
-                    arguments(dateTime, List.of(event0), Collections.emptyList(), null),
-                    arguments(dateTime, List.of(event0), List.of(eventDateMinTrackTime0), null),
-                    arguments(dateTime, List.of(event0), List.of(eventDateMinTrackTime0, eventDateMinTrackTime1), event0),
-                    arguments(dateTime, List.of(event0), List.of(eventDateMinTrackTime1, eventDateMinTrackTime2, eventDateMinTrackTime3), event2),
-                    arguments(dateTime, List.of(event0), List.of(eventDateMinTrackTime1, eventDateMinTrackTime3), event0)
+                    arguments(true, false, dateTime, Collections.emptyList(), null, null),
+                    arguments(true, false, dateTime, List.of(event1), null, null),
+                    arguments(true, false, dateTime, List.of(event0), Collections.emptyList(), null),
+                    arguments(true, false, dateTime, List.of(event0), List.of(eventDateMinTrackTime0), null),
+                    arguments(true, false, dateTime, List.of(event0), List.of(eventDateMinTrackTime0, eventDateMinTrackTime1), event0),
+                    arguments(true, false, dateTime, List.of(event0), List.of(eventDateMinTrackTime1, eventDateMinTrackTime2, eventDateMinTrackTime3), event2),
+                    arguments(true, false, dateTime, List.of(event0), List.of(eventDateMinTrackTime1, eventDateMinTrackTime3), event0),
+
+                    arguments(false, true, dateTime, Collections.emptyList(), null, null),
+                    arguments(false, true, dateTime, List.of(event0), null, null),
+                    arguments(false, true, dateTime, List.of(event1), Collections.emptyList(), null),
+                    arguments(false, true, dateTime, List.of(event1), List.of(eventDateMinTrackTime0), null),
+                    arguments(false, true, dateTime, List.of(event1), List.of(eventDateMinTrackTime0, eventDateMinTrackTime1), event0),
+                    arguments(false, true, dateTime, List.of(event1), List.of(eventDateMinTrackTime1, eventDateMinTrackTime2, eventDateMinTrackTime3), event2),
+                    arguments(false, true, dateTime, List.of(event1), List.of(eventDateMinTrackTime1, eventDateMinTrackTime3), event0),
+
+                    arguments(false, false, dateTime, Collections.emptyList(), null, null),
+
+                    arguments(false, true, dateTime, Collections.emptyList(), null, null),
+                    arguments(false, true, dateTime, List.of(event0, event1), Collections.emptyList(), null),
+                    arguments(false, true, dateTime, List.of(event0, event1), List.of(eventDateMinTrackTime0), null),
+                    arguments(false, true, dateTime, List.of(event0, event1), List.of(eventDateMinTrackTime0, eventDateMinTrackTime1), event0),
+                    arguments(false, true, dateTime, List.of(event0, event1), List.of(eventDateMinTrackTime1, eventDateMinTrackTime2, eventDateMinTrackTime3), event2),
+                    arguments(false, true, dateTime, List.of(event0, event1), List.of(eventDateMinTrackTime1, eventDateMinTrackTime3), event0)
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void getDefaultEvent(LocalDateTime dateTime, List<Event> events, List<EventDateMinTrackTime> eventDateMinTrackTimeList, Event expected) {
-            final boolean IS_CONFERENCES = Boolean.TRUE;
-            final boolean IS_MEETUPS = Boolean.FALSE;
-
+        void getDefaultEvent(boolean isConferences, boolean isMeetups, LocalDateTime dateTime, List<Event> events,
+                             List<EventDateMinTrackTime> eventDateMinTrackTimeList, Event expected) {
             EventDao eventDao = Mockito.mock(EventDao.class);
             EventTypeDao eventTypeDao = Mockito.mock(EventTypeDao.class);
             EventServiceImpl eventService = Mockito.mock(EventServiceImpl.class, Mockito.withSettings().useConstructor(eventDao, eventTypeDao));
@@ -306,7 +321,7 @@ class EventServiceImplTest {
             Mockito.doCallRealMethod().when(eventService).getDefaultEvent(Mockito.anyBoolean(), Mockito.anyBoolean(), Mockito.any());
             Mockito.when(eventService.getConferenceDateMinTrackTimeList(Mockito.any())).thenReturn(eventDateMinTrackTimeList);
 
-            assertEquals(expected, eventService.getDefaultEvent(IS_CONFERENCES, IS_MEETUPS, dateTime));
+            assertEquals(expected, eventService.getDefaultEvent(isConferences, isMeetups, dateTime));
         }
     }
 
